# gildedrose

./: README.md  pyproject.toml  scripts.py
gildedrose/: factory.py  gilded_rose.py  item.py  item_factory.py
tests/: test_gilded_rose.py  texttest_fixture.py
