[tool.poetry]
name = "gildedrose"
version = "0.1.0"
description = ""
authors = ["Scott O'Mary <omaryscott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
